--- a/translations/validators.en.yaml
+++ b/translations/validators.en.yaml
@@ -6,3 +6,4 @@ Please enter a password: "Please enter a password"
 Your password should be at least {{ limit }} characters: "Your password should be at least {{ limit }} characters"
 Your password must be at least {{ limit }} characters long: "Your password must be at least {{ limit }} characters long"
 There is already an account with this email: "There is already an account with this email"
+Project name is required: "Project name is required"
