--- a/translations/validators.pl.yaml
+++ b/translations/validators.pl.yaml
@@ -6,3 +6,4 @@ Please enter a password: "Podaj hasło"
 Your password should be at least {{ limit }} characters: "Twoje hasło musi mieć co najmniej {{ limit }} znaków"
 Your password must be at least {{ limit }} characters long: "Twoje hasło powinno mieć co najmniej {{ limit }} znaków długości"
 There is already an account with this email: "Konto z tym adresem e-mail już istnieje"
+Project name is required: "Nazwa projektu jest wymagana"
