Forgot about flash and forms...

--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -63,5 +63,33 @@ created_at: "Created At"
 roles: "Roles"
 new_user: "Create New User!"
 user: "Users"
+flash:
+  profile_updated: "Profile updated!"
+  password_updated: "Password updated!"
+  new_bug_created: "Bug successfully created!"
+  update_bug: "Bug successfully updated!"
+  delete_bug: "Bug successfully deleted!"
+  register_success: "Account created successfully!"
+  register_user_success: "User created successfully."
+  edit_user_success: "User updated successfully."
+  delete_user_success: "User deleted successfully."
+form:
+  update_data: "Save data!"
+  name_user: "User name"
+  name_project: "Project name"
+  new_password: "New password"
+  not_blank: "This field can not be empty"
+  password_too_short: "Your password must be at least {{ limit }} characters long"
+  description: "Description"
+  status: "Status"
+  title: "Title of bug"
+  createdAt: "Created at"
+  updatedAt: "Updated At"
+  save: "Save"
+  email: "Email"
+  valid_email: "Please enter a valid email address"
+  agree_terms: "You should agree to our terms."
+  roles: "Roles"
+  password: "Password"
 
 
