--- a/translations/messages.pl.yaml
+++ b/translations/messages.pl.yaml
@@ -60,7 +60,35 @@ register: "Rejestracja"
 edit_user: "Edytuj użytkownika"
 user_index: "Index Użytkownika"
 created_at: "Stworzono o"
-roles: "Role"
+roles: "Stanowisko"
 new_user: "Stwórz Nowego Użytkownika!"
 user: "Użytkownicy"
+flash:
+  profile_updated: "Profil został zaktualizowany!"
+  password_updated: "Hasło zostało zmienione!"
+  new_bug_created: "Błąd został stworzony!"
+  update_bug: "Błąd został zmieniony!"
+  delete_bug: "Błąd został usunięty!"
+  register_success: "Konto zostało założone!"
+  register_user_success: "Użytkownik został dodany."
+  edit_user_success: "Użytkownik został zmieniony."
+  delete_user_success: "Użytkownik został usunięty."
+form:
+  update_data: "Zapisz dane!"
+  name_user: "Imie użytkownika"
+  name_project: "Nazwa projektu"
+  new_password: "Nowe hasło"
+  not_blank: "To pole nie może być puste."
+  password_too_short: "Twoje hasło musi mieć co najmniej {{ limit }} znaków"
+  description: "Opis"
+  status: "Status"
+  title: "Nazwa błędu"
+  createdAt: "Stworzono o"
+  updatedAt: "Zaktualizowano o"
+  save: "Zapisz"
+  email: "Email"
+  valid_email: "Wprowadź poprawny adress email"
+  agree_terms: "Musisz zaakceptować nasze warunki."
+  roles: "Stanowisko"
+  password: "Hasło"
 
