--- a/translations/messages.pl.yaml
+++ b/translations/messages.pl.yaml
@@ -91,4 +91,5 @@ form:
   agree_terms: "Musisz zaakceptować nasze warunki."
   roles: "Stanowisko"
   password: "Hasło"
+  terms: "Zgadzam się na warunki korzystania ze strony"
 
