--- a/translations/validators.en.yaml
+++ b/translations/validators.en.yaml
@@ -7,3 +7,7 @@ Your password should be at least {{ limit }} characters: "Your password should b
 Your password must be at least {{ limit }} characters long: "Your password must be at least {{ limit }} characters long"
 There is already an account with this email: "There is already an account with this email"
 Project name is required: "Project name is required"
+form.not_blank: "This field cannot be blank"
+form.valid_email: "Please provide a valid email address"
+form.agree_terms: "You must agree to the terms"
+form.password_too_short: "The password is too short"
